objects/TW1_Historico_Promo__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Conta__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Conta</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Históricos de Promoções</relationshipLabel>
        <relationshipName>Hist_ricos_de_Promo_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Data__c</fullName>
        <defaultValue>Today()</defaultValue>
        <label>Data</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Shopping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shopping</label>
        <referenceTo>TW1_Shopping__c</referenceTo>
        <relationshipLabel>Históricos de Promoções</relationshipLabel>
        <relationshipName>Hist_ricos_de_Promo_es</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Histórico da Promoção</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>Tudo</label>
    </listViews>
    <nameField>
        <label>Nome da Promoção</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Históricos de Promoções</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>